// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`yarn parser > parse simple yarn lock file 1`] = `
{
  "packages": [
    {
      "dependencies": [
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "another-package",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "2.3.4",
        },
      ],
      "devDependencies": [],
      "name": "some-package",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "1.2.3",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "another-package",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "2.3.4",
    },
  ],
  "root": {
    "dependencies": [],
    "devDependencies": [],
    "name": "root",
    "optionalDependencies": [],
    "peerDependencies": [],
    "version": "",
  },
  "type": "yarn",
}
`;

exports[`yarn parser > parses a complex yarn lock file 1`] = `
{
  "packages": [
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/aix-ppc64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/android-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/android-arm",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/android-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/darwin-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/darwin-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/freebsd-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/freebsd-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-arm",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-ia32",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-loong64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-mips64el",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-ppc64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-riscv64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-s390x",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/netbsd-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/netbsd-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/openbsd-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/openbsd-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/openharmony-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/sunos-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/win32-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/win32-ia32",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/win32-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/aix-ppc64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/android-arm",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/android-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/android-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/darwin-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/darwin-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/freebsd-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/freebsd-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-arm",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-ia32",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-loong64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-mips64el",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-ppc64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-riscv64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-s390x",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/netbsd-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/netbsd-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/openbsd-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/openbsd-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/openharmony-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/sunos-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/win32-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/win32-ia32",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/win32-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
      ],
      "devDependencies": [],
      "name": "esbuild",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "picocolors",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "1.1.1",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "tinyexec",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "1.0.1",
    },
  ],
  "root": {
    "dependencies": [],
    "devDependencies": [],
    "name": "root",
    "optionalDependencies": [],
    "peerDependencies": [],
    "version": "",
  },
  "type": "yarn",
}
`;

exports[`yarn parser > parses a complex yarn v1 lock file 1`] = `
{
  "packages": [
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/aix-ppc64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/android-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/android-arm",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/android-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/darwin-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/darwin-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/freebsd-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/freebsd-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-arm",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-ia32",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-loong64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-mips64el",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-ppc64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-riscv64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-s390x",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/linux-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/netbsd-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/netbsd-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/openbsd-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/openbsd-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/openharmony-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/sunos-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/win32-arm64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/win32-ia32",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "@esbuild/win32-x64",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "esbuild",
      "optionalDependencies": [
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/aix-ppc64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/android-arm",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/android-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/android-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/darwin-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/darwin-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/freebsd-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/freebsd-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-arm",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-ia32",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-loong64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-mips64el",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-ppc64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-riscv64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-s390x",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/linux-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/netbsd-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/netbsd-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/openbsd-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/openbsd-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/openharmony-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/sunos-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/win32-arm64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/win32-ia32",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "@esbuild/win32-x64",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "0.25.10",
        },
      ],
      "peerDependencies": [],
      "version": "0.25.10",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "picocolors",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "1.1.1",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "tinyexec",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "1.0.1",
    },
  ],
  "root": {
    "dependencies": [],
    "devDependencies": [],
    "name": "root",
    "optionalDependencies": [],
    "peerDependencies": [],
    "version": "",
  },
  "type": "yarn",
}
`;

exports[`yarn parser > populates root from package.json 1`] = `
{
  "packages": [
    {
      "dependencies": [
        {
          "dependencies": [],
          "devDependencies": [],
          "name": "another-package",
          "optionalDependencies": [],
          "peerDependencies": [],
          "version": "2.3.4",
        },
      ],
      "devDependencies": [],
      "name": "some-package",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "1.2.3",
    },
    {
      "dependencies": [],
      "devDependencies": [],
      "name": "another-package",
      "optionalDependencies": [],
      "peerDependencies": [],
      "version": "2.3.4",
    },
  ],
  "root": {
    "dependencies": [
      {
        "dependencies": [
          {
            "dependencies": [],
            "devDependencies": [],
            "name": "another-package",
            "optionalDependencies": [],
            "peerDependencies": [],
            "version": "2.3.4",
          },
        ],
        "devDependencies": [],
        "name": "some-package",
        "optionalDependencies": [],
        "peerDependencies": [],
        "version": "1.2.3",
      },
    ],
    "devDependencies": [],
    "name": "root",
    "optionalDependencies": [],
    "peerDependencies": [],
    "version": "1.0.0",
  },
  "type": "yarn",
}
`;
